# Inference_and_statistical_modeling

./: pyproject.toml
notebooks/: 002_statisticsProblem.ipynb
