[tool.poetry]
name = "inference-and-statistical-modeling"
version = "0.1.0"
description = ""
authors = ["Juan Andrés Ruiz Muñoz <143564687+JuanRuizIng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
